--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,113 @@
-.App {
-  text-align: center;
+body {
+  font-family: 'Inter';
+font-style: normal;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.header {
+   background-color:#F55A5A;
+   width: 100%;
+   height: 50px;
+   color: white;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  
+#nav {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#logo {
+ padding-top: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+#title {
+  padding-top: 15px;
+font-size: 18px;
+}
+
+.places {
+  margin-top: 10px;
+  padding-top: 50px;
+  padding-left: 50px;
+  display: flex;
+  flex-direction: row;
+  max-width: 100%;
+}
+
+@media (max-width:550px) {
+  .places {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
   }
-  to {
-    transform: rotate(360deg);
+  .img1 {
+    margin: 0 auto;
   }
 }
+
+.img1 {
+  height: 200px;
+  width: 200px;
+}
+
+#location {
+  margin-left: 10px;
+  padding: 5px;
+}
+
+#iconl {
+  margin-left: 5px;
+  height: 25px;
+  color: #F55A5A;
+}
+
+#country {
+  height: 25px;
+  text-align: center;
+  margin: 0;
+}
+
+#map {
+  height: 25px;
+  text-align: center;
+  margin-left: 10px;
+  color:#918E9B ;
+}
+
+#deatails {
+  display:inline-flex;
+  padding: 5px;
+}
+
+#name {
+  margin-left: 10px;
+  color:#2B283A ;
+}
+
+#start {
+  margin-left: 10px;
+  color: #2B283A;
+}
+
+#end {
+  color: #2B283A;
+}
+
+#description {
+left: 184px;
+top: 203px;
+font-weight: 400;
+font-size: 13px;
+line-height: 130%;
+color: #2B283A;
+margin-left: 10px;
+max-width: 400px;
+text-align: justify;
+}
+
+
+
+#section1 {
+  display: flex;
+  flex-direction: row;
+}
+
